genealogy-macros/tests/ui/empty_struct.rs
use genealogy_macros::record;

#[record]
struct Record;

pub fn main() {}
